docs update and code clean up

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -41,7 +41,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
           <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
           <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
           <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-          <li class="uq-header__search-toggle">
+          <li class="uq-header__navigation-list-item uq-header__search-toggle">
             <button class="uq-header__search-toggle-button">Toggle search</button>
           </li>
         </ul>
@@ -53,8 +53,8 @@ using [*UQ Search*](https://www.uq.edu.au/search).
           <legend class="hidden">
             <span class="uq-header__search-title">What are you looking for?</span>
           </legend>
-          <span class="uq-header__search-title">What are you looking for?</span>
-          <div class="uq-header__search-scope">Search all UQ websites</div>
+          <span class="uq-header__search-title" tabindex="0">What are you looking for?</span>
+          <span class="uq-header__search-scope" tabindex="0">Search all UQ websites</span>
         </fieldset>
         <div class="uq-header__search-query">
           <label for="edit-q" class="visually-hidden">Search term</label>
@@ -64,9 +64,6 @@ using [*UQ Search*](https://www.uq.edu.au/search).
           </span>
         </div>
       </form>
-      <nav class="uq-header__navigation uq-header__navigation--mobile" aria-label="Global navigation">
-        <ul></ul>
-      </nav>
     </div>
   </div>
 </header>
@@ -104,7 +101,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
           <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
           <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
           <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-          <li class="uq-header__search-toggle">
+          <li class="uq-header__navigation-list-item uq-header__search-toggle">
             <button class="uq-header__search-toggle-button">Toggle search</button>
           </li>
         </ul>
