--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -25,46 +25,43 @@ using [*UQ Search*](https://www.uq.edu.au/search).
 ```html
 <header class="uq-header">
   <div class="uq-header__container">
-    <div class="uq-header__global">
-      <div class="uq-header__logo">
-        <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-        <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
-      </div>
-      <nav class="uq-header__navigation" aria-label="Global navigation">
-        <ul>
-          <li class="uq-header__navigation-list-item"><a href="https://contacts.uq.edu.au/">Contacts</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://future-students.uq.edu.au/">Study</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://maps.uq.edu.au/">Maps</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.uq.edu.au/news/">News</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.uq.edu.au/events/">Events</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://jobs.uq.edu.au/">Jobs</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-          <li class="uq-header__navigation-list-item uq-header__search-toggle">
-            <button class="uq-header__search-toggle-button">Toggle search</button>
-          </li>
-        </ul>
-      </nav>
+    <div class="uq-header__logo">
+      <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+      <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+    </div>
+    <div class="uq-header__search-toggle">
+      <button class="uq-header__search-toggle-button">Search</button>
     </div>
     <div class="uq-header__search">
-      <form class="uq-header__search-form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
-        <fieldset class="uq-header__search-scope-container">
-          <legend class="hidden">
-            <span class="uq-header__search-title">What are you looking for?</span>
-          </legend>
-          <span class="uq-header__search-title" tabindex="0">What are you looking for?</span>
-          <span class="uq-header__search-scope" tabindex="0">Search all UQ websites</span>
+      <form>
+        <fieldset>
+          <legend class="uq-header__search-title">What are you looking for?</legend>
+          <div class="uq-header__search-range">
+            <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
+          </div>
+          <div class="uq-header__search-query">
+            <label for="edit-q" class="visually-hidden">Search term</label>
+            <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
+            <span class="uq-header__search-query-button">
+              <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+            </span>
+          </div>
         </fieldset>
-        <div class="uq-header__search-query">
-          <label for="edit-q" class="visually-hidden">Search term</label>
-          <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
-          <span class="uq-header__search-query-button">
-            <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
-          </span>
-        </div>
       </form>
     </div>
+    <nav class="uq-header__navigation">
+      <ul class="uq-header__navigation-container">
+        <li><a class="uq-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+        <li><a class="uq-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
+        <li><a class="uq-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
+        <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
+        <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
+        <li><a class="uq-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+        <li><a class="uq-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
+        <li><a class="uq-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
+        <li><a class="uq-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 ```
@@ -85,56 +82,49 @@ allow users to choose to search all UQ sites or just the content on your site\*.
 ```html
 <header class="uq-header">
   <div class="uq-header__container">
-    <div class="uq-header__global">
-      <div class="uq-header__logo">
-        <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-        <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
-      </div>
-      <nav class="uq-header__navigation" aria-label="Global navigation">
-        <ul>
-          <li class="uq-header__navigation-list-item"><a href="https://contacts.uq.edu.au/">Contacts</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://future-students.uq.edu.au/">Study</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://maps.uq.edu.au/">Maps</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.uq.edu.au/news/">News</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.uq.edu.au/events/">Events</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://jobs.uq.edu.au/">Jobs</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://www.library.uq.edu.au/">Library</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://giving.uq.edu.au/">Give now</a></li>
-          <li class="uq-header__navigation-list-item"><a href="https://my.uq.edu.au/">my.UQ</a></li>
-          <li class="uq-header__navigation-list-item uq-header__search-toggle">
-            <button class="uq-header__search-toggle-button">Toggle search</button>
-          </li>
-        </ul>
-      </nav>
+    <div class="uq-header__logo">
+      <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+      <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+    </div>
+    <div class="uq-header__search-toggle">
+      <button class="uq-header__search-toggle-button">Search</button>
     </div>
     <div class="uq-header__search">
-      <form class="uq-header__search-form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
-        <fieldset class="uq-header__search-scope-container">
-          <legend class="hidden">
-            <span class="uq-header__search-title">What are you looking for?</span>
-          </legend>
-          <span class="uq-header__search-title">What are you looking for?</span>
-          <div class="uq-header__search-scope">
-            <div class="uq-header__search-scope-item">
-              <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio">
-              <label for="edit-as_sitesearch-off" class="option">Search all UQ websites</label>
+      <form>
+        <fieldset>
+          <legend class="uq-header__search-title">What are you looking for?</legend>
+          <div class="uq-header__search-range">
+            <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio">
+            <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
+          </div>
+          <!-- Customise the site search URL for your website -->
+          <div class="uq-header__search-range">
+              <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="[https://your-site-domain.uq.edu.au]" checked="checked" class="form-radio uq-header__search-radio">
+              <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website ([your-site-domain.uq.edu.au])</label>
             </div>
-            <!-- Customise the site search URL for your website -->
-            <div class="uq-header__search-scope-item">
-              <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="[https://your-site-domain.uq.edu.au]" checked="checked" class="form-radio">
-              <label for="edit-as_sitesearch-on" class="option">Search this website ([your-site-domain.uq.edu.au])</label>
+            <div class="uq-header__search-query">
+              <label for="edit-q" class="visually-hidden">Search term</label>
+              <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
+              <span class="uq-header__search-query-button">
+                <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+              </span>
             </div>
-        </div>
-        </fieldset>
-        <div class="uq-header__search-query">
-          <label for="edit-q" class="visually-hidden">Search term</label>
-          <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
-          <span class="uq-header__search-query-button">
-            <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
-          </span>
-        </div>
-      </form>
-    </div>
+          </fieldset>
+        </form>
+      </div>
+      <nav class="uq-header__navigation">
+        <ul class="uq-header__navigation-container">
+          <li><a class="uq-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+          <li><a class="uq-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
+          <li><a class="uq-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
+          <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
+          <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
+          <li><a class="uq-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+          <li><a class="uq-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
+          <li><a class="uq-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
+          <li><a class="uq-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 ```
