fix sizes and reomve unused css

--- a/packages/storybook-html/src/components/core/typography-styles.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-styles.story.mdx
@@ -96,7 +96,7 @@ export const Styles = () => `
       <td className="uqds-table__item"><h2>H2</h2></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">text--xxl</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h2>This is a supporting heading</h2></td> 
@@ -114,7 +114,7 @@ export const Styles = () => `
       <td className="uqds-table__item"><h4>H4</h4></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">font-size-l</td>
+      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
       <td className="uqds-table__item" data-title="Example"><h4>This is a supporting heading</h4></td> 
