--- a/packages/storybook-html/src/components/core/typography-styles.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-styles.story.mdx
@@ -9,7 +9,7 @@ import './_typography.scss';
 
 ## Sizes
 
-We use 16px as the base or default font size and use it to calculate a typle scale for the other font sizes.
+We use 16px as the base or default font size and use it to calculate the other font sizes.
 
 <table className="uqds-table uqds-table--card">
   <thead>
