--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -1,16 +1,105 @@
 import { Meta, Story, Canvas, Preview } from '@storybook/addon-docs/blocks';
 import './_typography.scss';
 
-<Meta title="Core/Typography/Styles" />
+<Meta title="Core/Typography" />
 
-# Styles
+# Typography 
+
+<><br /></>
+
+## Fonts 
+
+The following fonts are used for UQ online applications:
+
+export const Fonts = () => `
+<table className="uqds-table uqds-table--card uqds-fonts">
+  <thead>
+    <tr>
+      <th>Font</th>
+      <th>Styles</th>
+      <th>Usage</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><div class="uqds-font uqds-font--roboto">Roboto</div></td>
+      <td>
+        <div class="uqds-font uqds-font--roboto">Regular (400)</div>
+        <div class="uqds-font uqds-font--roboto uqds-font--italic">Regular (400) italic</div>
+        <div class="uqds-font uqds-font--roboto uqds-font--500">Medium (500)</div>
+        <div class="uqds-font uqds-font--roboto uqds-font--500 uqds-font--italic">Medium (500) italic</div>
+      </td>
+      <td>For headings and paragraph text</td>
+    </tr>
+    <tr>
+      <td><div class="uqds-font uqds-font--merriweather uqds-font--italic">Merriweather</div></td>
+      <td><div class="uqds-font uqds-font--merriweather uqds-font--italic">Regular (400) Italic</div></td>
+      <td>For blockquotes and testimonials</td>
+    </tr>
+    <tr>
+      <td><div class="uqds-font uqds-font--montserrat uqds-font--500">Montserrat</div></td>
+      <td><div class="uqds-font uqds-font--montserrat uqds-font--500">Medium (500)</div></td>
+      <td>For the main page heading</td>
+    </tr>
+  </tbody>
+</table>
+`;
+
+<Story name="Fonts">{Fonts.bind({})}</Story>
+
+<><br /><br /></>
+
+### Loading fonts
+
+Copy the HTML or CSS below and paste it into your project to load design system fonts.
+
+**HTML**
+```html
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Roboto/roboto.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css" />
+```
+
+**CSS**
+```css
+@import url('https://static.uq.net.au/v13/fonts/Roboto/roboto.css');
+@import url('https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css');
+@import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
+```
+
+### Font stacks
+
+The following font family declarations use widely available fonts. A user's web browser will look at the comma-separated list and will
+attempt to use each font in turn until it finds one that is available on the user's computer. The final "generic" font (sans-serif or serif) hints at what type of font to use if the web browser doesn't
+find any of the fonts in the list.
+
+**Roboto**
+```css
+font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+```
+**Merriweather**
+```css
+font-family: Merriweather, Georgia, serif;
+```
+**Montserrat**
+```css
+font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+```
+
+### Fallback fonts
+
+When platforms and systems such as third party applications are not able to display our fonts, use fallback fonts. If none of the alternative font options are available, it is recommended to use the default font provided by the platform or system. 
+
+<p><span class="uqds-font uqds-font--arial">Arial</span>: For headings and paragraph text</p>
+<p><span class="uqds-font uqds-font--georgia uqds-font--italic">Georgia</span>: For blockquotes and testimonials</p>
 
 <><br /></>
 
 ## Sizes
 
-We use 16px as the base or default font size and use it to calculate the other font sizes.
+We use 16px as the base font size and use it to calculate the other font sizes.
 
+export const Sizes = () => `
 <table className="uqds-table uqds-table--card">
   <thead>
     <tr>
@@ -62,10 +151,13 @@ We use 16px as the base or default font size and use it to calculate the other f
     </tr>
   </tbody>
 </table>
+`;
 
-<><br /></>
+<Story name="Sizes">{Sizes.bind({})}</Story>
 
-## Elements
+<><br /></><><br /></>
+
+## Styles
 
 The following typography styles are setup in HTML elements and components. Please reference the styles below when configuring new websites and components.
 
@@ -84,61 +176,61 @@ export const Styles = () => `
   </thead>
   <tbody>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h1>H1</h1></td>
+      <td className="uqds-table__item">H1</td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td> 
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h1>This is a main heading</h1></td> 
+      <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h2>H2</h2></td>
+      <td className="uqds-table__item">H2</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h2>This is a supporting heading</h2></td> 
+      <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h3>H3</h3></td>
+      <td className="uqds-table__item">H3</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h3>This is a supporting heading</h3></td> 
+      <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h4>H4</h4></td>
+      <td className="uqds-table__item">H4</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h4>This is a supporting heading</h4></td> 
+      <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h5>H5</h5></td>
+      <td className="uqds-table__item">H5</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h5>This is a supporting heading</h5></td> 
+      <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><h6>H6</h6></td>
+      <td className="uqds-table__item">H6</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Size:">$font-size</td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Colour:">$uq-purple</td>
-      <td className="uqds-table__item" data-title="Example"><h6>This is a supporting heading</h6></td> 
+      <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><p class="uqds-font--lead">Lead</p></td>
+      <td className="uqds-table__item">Lead</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
@@ -147,16 +239,16 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--lead">This is lead paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><p>Paragraph</p></td>
+      <td className="uqds-table__item">Paragraph</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size</td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Colour:">$text</td>
-      <td className="uqds-table__item" data-title="Example">This is paragraph text</td> 
+      <td className="uqds-table__item" data-title="Example"><p>This is paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><p class="uqds-font--small">Paragraph small</p></td>
+      <td className="uqds-table__item">Paragraph small</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
@@ -165,7 +257,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--small">This is small paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><p class="uqds-font--xsmall">Paragraph xsmall</p></td>
+      <td className="uqds-table__item">Paragraph xsmall</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-xs</td>
@@ -174,7 +266,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Example"><p class="uqds-font--xsmall">This is extra small paragraph text</p></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><a href="">Link</a></td>
+      <td className="uqds-table__item">Link</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size</td>
@@ -201,7 +293,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Example"><ul><li>This is an unordered list item</li></ul></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><label>Label</label></td>
+      <td className="uqds-table__item">Label</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
@@ -210,7 +302,7 @@ export const Styles = () => `
       <td className="uqds-table__item" data-title="Example"><label>This is a label</label></td> 
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><blockquote>Blockquote</blockquote></td>
+      <td className="uqds-table__item">Blockquote</td>
       <td className="uqds-table__item" data-title="Font:">Merriweather</td>
       <td className="uqds-table__item" data-title="Weight:">Regular italic, 400</td>
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
@@ -223,4 +315,3 @@ export const Styles = () => `
 `;
 
 <Story name="Styles">{Styles.bind({})}</Story>
-
