--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -8,7 +8,7 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 <div className="uq-alert uq-alert--info" role="alert">
   <div className="uqds-alert uq-alert__message">
     <h3 className="uq-alert__title">We're in production!</h3>
-    <p><strong>The Design system is in active use in current projects at UQ.</strong> Our NPM packages are currenlty restricted to ITS-ADS staff with AWS tools access. If you have access, please refer to the <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">environment setup instructions</a>. If you do not have access, <a href="mailto:webservices@uq.edu.au">contact us</a> and we can package up styles and components for you to use in your project.</p>
+    <p><strong>The Design system is in active use in current projects at UQ.</strong> Our NPM packages are currently restricted to ITS-ADS staff with AWS tools access. If you have access, please refer to the <a href="https://confluence.its.uq.edu.au/confluence/x/0DwDCw">environment setup instructions</a>. If you do not have access, <a href="mailto:webservices@uq.edu.au">contact us</a> and we can package up styles and components for you to use in your project.</p>
   </div>
 </div>
 <br/>
