add reference to written style guide

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -159,7 +159,7 @@ export const Sizes = () => `
 
 ## Styles
 
-The following typography styles are setup in HTML elements and components. Please reference the styles below when configuring new websites and components.
+The following typography styles are setup in HTML elements and components. Please reference the styles below when configuring new websites and components. For detailed documentation about writing style at UQ, reference the <a href="https://marketing-communication.uq.edu.au/written-style-guide" target="_blank" rel="nofollow noopener noreferrer" class="sbdocs sbdocs-a css-19nbuh3">written style guide</a>. 
 
 export const Styles = () => `
 <table className="uqds-table uqds-table--card">
