--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -13,18 +13,16 @@ An accordion is a vertically stacked group of titles that on interaction expand 
 
 Accordions can be implemented using `<div>` or `<ul> <li>` lists. The default example uses divs. 
 
-## Default example
+Use divs if there is significant amount of content.
 
-Use the default accordion example if there is significant amount of content.
+## Using divs
 
-### Using divs
-
-<Canvas withSource="none">
-  <Story id="components-accordion--using-divs" />
+<Canvas withSource="none" withToolbar>
+  <Story height={220} id="components-accordion--using-divs" />
 </Canvas>
 
 ```html
-<div  class="uq-accordion" aria-label="Accordion button group">
+<div class="uq-accordion" aria-label="Accordion button group">
     <div  class="uq-accordion__item">
       <button  class="uq-accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">Title 1</button>
       <div  class="uq-accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
@@ -36,18 +34,16 @@ Use the default accordion example if there is significant amount of content.
 </div>
 ```
 
-## Variant examples
+## Using lists
 
-### Using lists
+Use lists if content is less and when the semantics of a list serves better with assistive technologies like screen readers.
 
-Use accordions using lists if content is less and when the semantics of a list serves better with assistive technologies like screen readers.
-
-<Canvas withSource="none">
-  <Story id="components-accordion--using-lists" />
+<Canvas withSource="none" withToolbar>
+  <Story height={220} id="components-accordion--using-lists" />
 </Canvas>
 
 ```html
-<ul  class="uq-accordion" aria-label="Accordion button group">
+<ul class="uq-accordion" aria-label="Accordion button group">
     <li  class="uq-accordion__item">
       <button  class="uq-accordion__toggle" aria-controls="content-11" aria-expanded="false" id="accordion-title-11">Title 1</button>
       <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-11" aria-labelledby="accordion-title-11">
@@ -57,48 +53,6 @@ Use accordions using lists if content is less and when the semantics of a list s
     ...
     ...
 </ul>
-```
-
-### Shaded
-
-Use shaded accordion when the title area needs to be shaded light grey when collapsed.
-
-<Canvas withSource="none">
-  <Story id="components-accordion--shaded" />
-</Canvas>
-
-```html
-<div  class="uq-accordion uq-accordion--shaded" aria-label="Accordion button group">
-    <div  class="uq-accordion__item">
-      <button  class="uq-accordion__toggle" aria-controls="content-111" aria-expanded="false" id="accordion-title-111">Title 1</button>
-      <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-111" aria-labelledby="accordion-title-111">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
-      </div>
-    </div>
-    ...
-    ...
-</div>
-```
-
-### Small title
-
-Use small title accordion example for smaller title font sizes.
-
-<Canvas withSource="none">
-  <Story id="components-accordion--small-title" />
-</Canvas>
-
-```html
-<div  class="uq-accordion uq-accordion--secondary" aria-label="Accordion button group">
-    <div  class="uq-accordion__item">
-      <button  class="uq-accordion__toggle" aria-controls="content-1111" aria-expanded="false" id="accordion-title-1111">Title 1</button>
-      <div  class="uq-accordion__content" role="region" aria-hidden="true" id="content-1111" aria-labelledby="accordion-title-1111">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
-      </div>
-    </div>
-    ...
-    ...
-</div>
 ```
 
 ## How and when to use
