--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -64,3 +64,54 @@ For quoting a passage of text or speech from another source.
     </div>
 </blockquote>
 ```
+
+### Quotemark
+
+<Canvas withSource="none">
+  <Story id="components-blockquote--blockquote-quotemark" />
+</Canvas>
+
+```html
+<blockquote class="blockquote blockquote--light blockquote--quotemark">
+    <div class="blockquote__body">
+        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
+    </div>
+    <div class="blockquote__footer">
+        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+    </div>
+</blockquote>
+```
+
+### Quotemark, Dark
+
+<Canvas withSource="none">
+  <Story id="components-blockquote--blockquote-quotemark-dark" />
+</Canvas>
+
+```html
+<blockquote class="blockquote blockquote--dark blockquote--quotemark">
+    <div class="blockquote__body">
+        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
+    </div>
+    <div class="blockquote__footer">
+        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+    </div>
+</blockquote>
+```
+
+### Quotemark, Dark, Boxed
+
+<Canvas withSource="none">
+  <Story id="components-blockquote--blockquote-quotemark-dark-boxed" />
+</Canvas>
+
+```html
+<blockquote class="blockquote blockquote--dark blockquote--boxed blockquote--quotemark">
+    <div class="blockquote__body">
+        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
+    </div>
+    <div class="blockquote__footer">
+        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
+    </div>
+</blockquote>
+```
