update docs to explain default and expand many behaviour:

--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -59,7 +59,11 @@ Use lists if there is less content and when the semantics of a list serves bette
 
 Accordions are suitable when users only need to view a few key pieces of content on a page. By hiding most of the content, users can focus on the few topics that are relevant to them.
 
-By default, users can expand one accordion at a time. If you wish to enable users to expand any number of accordions at a time, add the classname `uq-accordion--expand-many` to the `<div>` or `<ul>`.
+### Default behaviour 
+By default, users can expand and collapse one accordion at a time as shown in the examples above using `<div>` or `<ul>`. 
+
+### Expand many behaviour
+If you wish to enable users to expand and manually collapse any number of accordions at a time, add the classname `uq-accordion--expand-many` to the `<div>` or `<ul>`.
 
 <Canvas withSource="none">
   <Story height={300} id="components-accordion--expand-many" />
