--- a/packages/storybook-html/src/components/footer/footer.docs.mdx
+++ b/packages/storybook-html/src/components/footer/footer.docs.mdx
@@ -5,6 +5,12 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <StatusBadge.Review /><StatusBadge.DraftDoc />
 
+## Overview
+
+The global footer provides a consistent branding and navigational element across all UQ pages. It contains supplementary information such as copyright, ABN details, contact and emergency information, links to other pages within the website, and the Reconciliation statement.
+
+## Default example
+
 <Canvas withSource="none" withToolbar>
   <Story height={339} id="components-footer--footer" />
 </Canvas>
