--- a/packages/storybook-html/src/components/pagination/pagination.docs.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.docs.mdx
@@ -2,6 +2,11 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Components/Pagination/Pagination states" />
 
+## Overview
+
+
+## Default example
+
 ### Pagination All
 
 <Canvas withSource="none">
