updated doc to include section spacing example

--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -146,3 +146,7 @@ light text `uq-section--light-text`
 - **No spacing bottom** `uq-section--no-bottom-spacing` - removes bottom padding only.
 - **large spacing bottom** `uq-section--large-bottom-spacing` - adds large spacing below to show more background image.
 - **Extra large spacing bottom** `uq-section--extra-large-bottom-spacing` - adds extra large spacing below.
+
+<Canvas withSource="none">
+  <Story id="layout-sections--sections-spacing" />
+</Canvas>
